[tool.poetry]
name = "dotmatrix"
version = "0.1.0"
description = "A pixel matrix rendered using braille characters."
authors = ["Tim Fischer <me@timfi.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
add-ignore = "D104,D100"
