[tool.poetry]
name = "dotmatrix"
version = "0.2.0"
description = "A pixel matrix rendered using braille characters."
license = "GPL-2.0-or-later"
authors = ["Tim Fischer <me@timfi.com>"]
readme = "README.md"
homepage = "https://github.com/timfi/dotmatrix"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Typing :: Typed"
]
include = ["py.typed"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
add-ignore = "D104,D100"
